@@ -1,72 +1,52 @@
 <% @title = "About #{DEFAULT_APP_NAME}" %>
 
-<div class="row">
-  <div class="span6">
-    &nbsp;
-  </div>
-  <div class="span6">
-    <div class="hero-unit">
-      <h1><%= @title %></h1>
-      <p><%= DEFAULT_APP_NAME %> is a <%= link_to 'free to use', new_user_registration_path, class: 'btn btn-mini btn-primary' %> and <%= link_to 'open source', 'https://github.com/remomueller/notes', class: 'btn btn-mini btn-primary' %> project management tool that minimizes overhead and maximizes productivity and accountability.</p>
-    </div>
+<div class="row" style="margin-top:54px">
+  <div class="span12">
+    <h1 style="font-size:40px;font-weight:300;text-align:center;margin-bottom:9px"><%= @title %></h1>
+    <p style="font-size:18px;line-height:36px;font-weight:300;color:#999;text-align:center">Visit our <%= link_to 'online community', ABOUT_PAGE_FORUM, target: '_blank' %> or contact us <%= mail_to ABOUT_PAGE_CONTACT, 'via email', target: '_blank', subject: "#{DEFAULT_APP_NAME} Question" %>.</p>
+    <p style="text-align:center;line-height:36px;"><%= link_to 'Sign Me Up', new_user_registration_path, class: "btn btn-primary btn-large" %></p>
   </div>
 </div>
 
-<div class="row">
-  <div class="span6">
+<hr class="soften">
 
-    <div class="hero-unit">
-      <h1>Create Projects</h1>
-      <p>Share your projects with collaborators and categorize your stickies!</p>
-      <p>
-        <ul>
-          <li>Invite <b>Editors</b> that can participate on your projects.</li>
-          <li>Invite <b>Viewers</b> that can see project updates and comment on stickies.</li>
-          <li>Create project specific <span class="label label-info">Tags</span> to easily find and get statistics on stickies.</li>
-          <li>Create <b>Sticky Templates</b> for common series of stickies and assign stickies to collaborators.</li>
-          <li>Divide your project by <b>Time Frames</b> to group stickies by milestones or release dates.</li>
-        </ul>
-      </p>
-    </div>
-  </div>
-  <div class="span6">
-    &nbsp;
-  </div>
-</div>
+<p style="font-size:18px;line-height:36px;font-weight:300;color:#999;text-align:center;margin-bottom:20px"><%= DEFAULT_APP_NAME %> is a <%= link_to 'free to use*', 'https://github.com/remomueller/notes/blob/master/LICENSE', rel: 'tooltip', data: { title: 'Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License' } %> and <%= link_to 'open source', 'https://github.com/remomueller/notes', rel: 'tooltip', data: { title: 'Source code freely available on GitHub' } %> project management tool that minimizes overhead and maximizes productivity and accountability.</p>
 
 <div class="row">
-  <div class="span6">
-    &nbsp;
+  <div class="span4">
+    <h2 class="about">Create Projects</h2>
+    <p>Share your projects with collaborators and categorize your stickies!</p>
+    <p>
+      <ul>
+        <li>Invite <b>Editors</b> that can participate on your projects.</li>
+        <li>Invite <b>Viewers</b> that can see project updates and comment on stickies.</li>
+        <li>Create project specific <span class="label label-info">Tags</span> to easily find and get statistics on stickies.</li>
+        <li>Create <b>Sticky Templates</b> for common series of stickies and assign stickies to collaborators.</li>
+      </ul>
+    </p>
   </div>
-  <div class="span6">
-    <div class="hero-unit">
-      <h1>Create Stickies</h1>
-      <p>Incremental updates to track and achieve your project goals!</p>
-      <p>
-        <ul>
-          <li>Provide documentation, todos, followups, and more!</li>
-          <li>Assign collaborators to a sticky for them to complete.</li>
-          <li>Add <span class="label label-info">Tags</span> to Stickies for easier reporting and searching.</li>
-          <li>Post <b>Comments</b> on stickies that get emailed to collaborators.</li>
-        </ul>
-      </p>
-    </div>
+  <div class="span4">
+    <h2 class="about">Create Stickies</h2>
+    <p>Incremental updates to track and achieve your project goals!</p>
+    <p>
+      <ul>
+        <li>Provide documentation, todos, followups, and more!</li>
+        <li>Assign collaborators to a sticky for them to complete.</li>
+        <li>Add <span class="label label-info">Tags</span> to Stickies for easier reporting and searching.</li>
+        <li>Post <b>Comments</b> on stickies that get emailed to collaborators.</li>
+      </ul>
+    </p>
   </div>
-</div>
 
-<div class="hero-unit">
-
-  <h1>View Calendar</h1>
-  <p>View of your current and upcoming stickies for multiple projects!</p>
-  <p>
-  <ul>
-    <li>Create Stickies and Templates directly from the calendar.</li>
-    <li>View only the stickies you need on the calendar by filtering on projects, completion status, and those assigned exclusively to you.</li>
-    <li>Stickies are grouped together by <span class="label label-info">Tags</span>!</li>
-  </ul>
-  </p>
-
-  <div class="row">
-    <div class="span4 offset4"><%= link_to 'Sign Me Up!', new_user_registration_path, class: "btn btn-primary btn-large" %></div>
+  <div class="span4">
+    <h2 class="about">View Calendar</h2>
+    <p>View of your current and upcoming stickies for multiple projects!</p>
+    <p>
+    <ul>
+      <li>Create Stickies and Templates directly from the calendar.</li>
+      <li>View only the stickies you need on the calendar by filtering on projects, completion status, and those assigned exclusively to you.</li>
+      <li>Stickies are grouped together by <span class="label label-info">Tags</span>!</li>
+    </ul>
+    </p>
   </div>
 </div>
