@@ -12,6 +12,7 @@
   * Email subjects no longer include the application name
   * Users without projects will now be prompted when they view the calendar to create a project
   * Default new user settings updated to also show completed stickies
+  * The About page now references the Task Tracker forum and contact information
 
 * Refactoring
   * Comments no longer use class_name or class_id and now require to be part of a sticky_id
